// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info should match a snapshot for variant  1`] = `
<Component
  message=""
  type="info"
/>
`;

exports[`Info should match a snapshot for variant 404 1`] = `
<Component
  message="Page not found"
  type="danger"
/>
`;

exports[`Info should match a snapshot for variant ADMIN_APPROVALS_EMPTY 1`] = `
<Component
  message="There are no updates that require approval"
  type="info"
/>
`;

exports[`Info should match a snapshot for variant CLIENT_APPS_EMPTY 1`] = `
<Component
  message="We are sorry, there are no apps listed compatible with your account"
  type="info"
/>
`;

exports[`Info should match a snapshot for variant DEVELOPER_APPS_EMPTY 1`] = `
<Component
  message="You currently have no apps listed. Go to the submit app page to submit an app. After submission, you will need to edit the app and set status to isListed to appear in the marketplace"
  type="info"
/>
`;

exports[`Info should match a snapshot for variant INSTALLED_APPS_EMPTY 1`] = `
<Component
  message="You have no apps installed - try browsing the apps list for apps you might find useful"
  type="info"
/>
`;
